navbar update from css

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             <img id="tentacles" src="assets/tentacles.png">
             <h1 class="header-text">Sea Monster Crowdfunding</h1>
         </div>
-        <div>
-            <a href="#stats" class="space">Stats</a>
-            <a href="#ourgame" class="space">Our Game</a>
+        <div class="space">
+            <a href="#stats">Stats</a>
+            <a href="#ourgame">Our Game</a>
         </div>
 
     </div>
